# logger_crossplatform_v2

./: .gitignore  README.md  TODO.txt
logger/: pch.h
logger/helpers/: ConverterStringHelper.cpp  ConverterStringHelper.h  StatusFunction.cpp  StatusFunction.h
logger/logger/core/: Logger.cpp  log.cpp
logger/logger/core/helpers/: WindowsFormatMessage.cpp  WindowsFormatMessage.h
logger/logger/core/output/: AndroidLogcatOutput.h  AppleTerminalOutput.h  BaseOutput.h  HTMLFileOutput.cpp  HTMLFileOutput.h  TerminalOutput.cpp  WinAPIOutput.h
logger/logger/logger/: Logger.h  log.h
logger/logger/logger/helpers/: LoggerParams.cpp  LoggerParams.h  StrConsts.h  time_utils.h
logger/stacktrace/: StackTraceSingleton.cpp  StackTraceSingleton.h
logger/stacktrace/android/: stacktrace_android.cpp  stacktrace_android.h
logger/stacktrace/linux/: stacktrace_linux.cpp  stacktrace_linux.h
logger/stacktrace/windows/: StackWalker.cpp
logger/test/: test.cpp
projects/test_logger_android/: settings.gradle
projects/test_logger_android/app/: build.gradle
projects/test_logger_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/test_logger_ios/test_logger_ios/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
projects/test_logger_ios/test_logger_ios.xcodeproj/: project.pbxproj
projects/test_logger_linux/: main  main.cpp
projects/test_logger_macos/test_logger_macos/: main.mm
projects/test_logger_macos/test_logger_macos.xcodeproj/: project.pbxproj
projects/test_logger_windows/: log.html  main.cpp  test_logger_windows.sln  test_logger_windows.vcxproj  test_logger_windows.vcxproj.filters
(+39 files in other folders)
